# leanid

./: .gitignore  CMakeLists.txt  README.md  setup-build.sh  vcpkg.json
.github/workflows/: ci.yml
include/datastructures/: editorconfig.h  eventloop.h  recursivedirectorywalker.h  zipper.h
include/views/: completion.h
src/: main.cpp
src/lib/: lib.cpp
src/lib/views/: ctrlp.cpp
